backend/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-backend
  template:
    metadata:
      labels:
        app: cloud-backend
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: cloud-backend
          image: 351291606284.dkr.ecr.eu-west-3.amazonaws.com/project-cloud-incident-backend:ec3c577
          imagePullPolicy: IfNotPresent
          # REQUIRED FOR HPA: Set baseline CPU requests & limits
          resources:
            requests:
              cpu: "180m"
              memory: "128Mi"
            limits:
              cpu: "220m"
              memory: "256Mi"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: rds-ca
              mountPath: /etc/rds
              readOnly: true
      volumes:
        - name: rds-ca
          secret:
            secretName: cloud-db-ca
