backend/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-backend
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: cloud-backend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
